--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.95"
 clap = { version = "4.5.21", features = ["derive"] }
+thiserror = "2.0.11"
 users = "0.11.0"
