--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,7 @@ anyhow = "1.0.95"
 clap = { version = "4.5.21", features = ["derive"] }
 thiserror = "2.0.11"
 users = "0.11.0"
+
+[dev-dependencies]
+regex = "1.5.4"
+test-generator = "0.3.0"
