--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.95"
+bumpalo = { version = "3.17.0", features = ["collections"] }
 thiserror = "2.0.11"
 
 [dev-dependencies]
