--- a/clox/Cargo.toml
+++ b/clox/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [features]
 debug_trace_execution = []
 default = ["debug_trace_execution"]
+# default = []
 
 
 [[bin]]
@@ -16,3 +17,4 @@ path = "src/bin/clox.rs"
 [dependencies]
 anyhow = { workspace = true }
 thiserror = { workspace = true }
+num_enum = { version = "0.7.4" }
