--- a/clox/Cargo.toml
+++ b/clox/Cargo.toml
@@ -5,8 +5,9 @@ edition = "2024"
 
 [features]
 debug_trace_execution = []
-default = ["debug_trace_execution"]
-# default = []
+debug_log_gc = []
+# default = ["debug_trace_execution", "debug_log_gc"]
+default = []
 
 
 [[bin]]
